<resources>
    <string name="app_name">OlympusServices</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="background">background</string>
    <string name="CompanyName">Olympus Services</string>
    <string name="signup">Sign Up</string>
    <string name="login">Log In</string>
    <string name="newusername">Enter Username</string>
    <string name="newpassword">Enter Password</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="servicename">Service Name</string>
    <string name="servicerate">Service Rate</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="remove">Remove</string>
    <string name="add">Add</string>
    <string-array name="roles">
        <item>Admin</item>
        <item>User</item>
        <item>Service Provider</item>

    </string-array>
</resources>
