<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background"
    tools:context=".Main">

    <TextView
        android:id="@+id/Title"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="70dp"
        android:gravity="center"
        android:text="@string/CompanyName"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@android:color/white"
        android:textSize="36sp"
        app:fontFamily="@font/julius_sans_one"
        android:layout_marginTop="30dp"/>

    <Button
        android:id="@+id/SignUp"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginBottom="35dp"
        android:onClick="onClickSignUp"
        android:text="@string/signup"
        android:theme="@style/AppTheme.Button"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"/>

    <Button
        android:id="@+id/LogIn"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:onClick="onClickLogIn"
        android:text="@string/login"
        android:theme="@style/AppTheme.Button"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"/>

</LinearLayout>