<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background"
    tools:context=".SignUp">

    <TextView
        android:id="@+id/Title"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginBottom="80dp"
        android:gravity="center"
        android:text="@string/signup"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@android:color/white"
        android:textSize="36sp"
        app:fontFamily="@font/julius_sans_one" />

    <Spinner
        android:id="@+id/RolesInput"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/customborder"
        android:entries="@array/roles"
        android:textColor="@android:color/white"
        android:textSize="15sp"
        android:theme="@android:style/TextAppearance.DeviceDefault.Widget.DropDownItem"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="108dp" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/UsernameInput"
        android:layout_width="match_parent"
        android:layout_height="81dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/customborder"
        android:theme="@android:style/TextAppearance.DeviceDefault.Widget.EditText">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/newusername"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/PasswordInput"
        android:layout_width="match_parent"
        android:layout_height="95dp"
        android:background="@drawable/customborder"
        android:theme="@android:style/TextAppearance.Holo.Widget.EditText">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint=""
            android:text="@string/newpassword"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@android:color/white"
            android:textSize="20sp" />
    </android.support.design.widget.TextInputLayout>

</LinearLayout>